--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "php": ">=5.3.3",
         "zendframework/zend-cache": ">=2.2.1",
-        "mockery/mockery": "0.*"
+        "prolic/humus-lock": "0.*"
     },
     "require-dev": {
         "zendframework/zendframework": ">=2.2.1",
