--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "php": ">=5.3.3",
         "zendframework/zend-cache": ">=2.2.1",
         "prolic/humus-lock": "0.*",
-        "marc-mabe/php-enum": "1.0.0-beta1"
+        "marc-mabe/php-enum": "dev-master"
     },
     "require-dev": {
         "zendframework/zendframework": ">=2.2.1",
