fix travis builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,11 @@ php:
   - 5.4
   - 5.5
 
+install:
+  - apt-get install uuid-dev -y
+
 before_script:
-  - pecl install uuid
+  - printf "\n" | pecl install uuid
   - pecl install pthreads-0.0.45
   - echo "extension = uuid.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
   - echo "extension = pthreads.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
