--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "php": ">=5.4.0",
         "ext-uuid": ">=1.0.3",
         "ext-pthreads": "*",
-        "marc-mabe/php-enum": "dev-master"
+        "marc-mabe/php-enum": "1.0.*"
     },
     "require-dev": {
         "phpunit/phpunit": ">=3.7",
