--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,4 @@ before_script:
   - composer update --prefer-source --dev
 
 script:
-  - ./vendor/bin/phpunit --coverage-clover ./build/logs/clover.xml
-
-after_script:
-  - php vendor/bin/coveralls -v
+  - ./vendor/bin/phpunit
