--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": ">=3.7",
-        "phpmd/phpmd": "1.5.*",
-        "satooshi/php-coveralls": "~0.6"
+        "phpmd/phpmd": "1.5.*"
     },
     "autoload": {
         "psr-0": {
