--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "php": ">=5.4.0",
         "ext-uuid": ">=1.0.3",
         "ext-pthreads": "*",
-        "marc-mabe/php-enum": "1.0.*"
+        "marc-mabe/php-enum": "1.0.*",
+        "prolic/concurrent-php-utils": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": ">=3.7",
